--- a/sass/pages/_indiewool.scss
+++ b/sass/pages/_indiewool.scss
@@ -13,6 +13,10 @@
     border-top: 2px solid $color-indiewool;
   }
 }
+
+p {
+  line-height: 1.5;
+}
 .indie {
   display: grid;
   grid-template-columns: 1fr;
@@ -131,6 +135,7 @@ margin: 0 auto;
     list-style: none;
     text-align: center;
     font-size: 1.6rem;
+    line-height: 1.5;
     
   }
 }
@@ -199,7 +204,9 @@ margin: 0 auto;
    margin-top: 4rem;
 
  }
-
+&__p-1 {
+  line-height: 1.5;
+}
 //  &__h3 {
 //    font-weight: 400;
 //    text-align: center;
@@ -207,27 +214,53 @@ margin: 0 auto;
 
 //  }
 
-  &__ul {
-    display: grid;
-    padding: 2.4rem 0 2.4rem 0;
-    list-style-type: none;
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
+&__table {
+ display: table-cell;
+ margin-top: 4rem;
+  grid-column: 2 / 3;
+  border-spacing: 10px;
+//  margin: 0 auto;
+ vertical-align: middle;
+//  
+&-right {
+  text-align: right;
+  padding-right: 2px;
+}
 
-    >li {
-      margin: 0 0 1.6rem 0;
-    }
+}
+
+ 
+ 
+
+ 
+
+
+  // &__ul {
+  //   display: grid;
+  //   padding: 2.4rem 0 2.4rem 0;
+  //   list-style-type: none;
+  //   grid-column: 2 / 3;
+  //   grid-row: 2 / 3;
+
+  //   >li {
+  //     margin: 0 0 1.6rem 0;
+  //   }
     
-  }
+  // }
 
   &__figures {
     font-family: 'shrikhand', cursive;
     color: $color-indiewool;
     font-weight: bold; 
     font-size: 4rem;
+    // text-align: right;
+    white-space: nowrap;
+    @media only screen and (max-width: $bp-medium) {
+      font-size: 3rem;
+    }
   }
-}
 
+}
 
 //COMPARISON SECTION========================
 .comparison {
@@ -320,6 +353,11 @@ margin: 0 auto;
   margin-top: 8rem;
   grid-column: 1 / -1;
 
+  &__data {
+    line-height: 1.2;
+    min-width: 360px;
+  }
+
   &__wrapper {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
@@ -332,6 +370,24 @@ margin: 0 auto;
   }
 
   }
+
+  &__table {
+    display: table-cell;
+    margin: 4rem 0 4rem 0;
+    border-spacing: 10px;
+     grid-column: 2 / 3;
+   //  margin: 0 auto;
+    vertical-align: middle;
+   
+    
+    
+   
+    &-right {
+      text-align: right;
+      padding-right: 5px;
+    }
+   }
+   
 
   
 }
